# sr-opinf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  cubic_spline_shift_diff_summary.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
example/ks/: configs.py  ks_base_solution.ipynb  ks_perturbed_solutions.ipynb  plot.py
src/SROpInf/: __init__.py  dataloader.py  mode_decomposition.py  sr_tools.py  timestepper.py  typing.py
src/SROpInf/grids/: grid1d.py
src/SROpInf/models/: ks.py  model.py
test/: test_grid1d_compare.py  test_grid1d_cubicspline.py  test_grid1d_demo.py  test_model_poly_comp.py
